tests/sources/invalid/types/semantic_equality_mismatch.fire
// Semantic type error: cannot compare incompatible types with '=='.

void equality_mismatch() {
    int32 a = 5;
    bool b = a == "hello";  //~ ERROR FS-SEM-0010 @16
}
